--- a/contacto.html
+++ b/contacto.html
@@ -1,25 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <style>
-        @font-face {
-            font-family: 'Quantum';
-            src: url('font/QUANTU1H.TTF');
-        }
-        body {
-            background-color: #ADD8E6; /* Azul celeste claro */
-        }
-        body, h1, h2, p, a, nav, footer {
-            font-family: 'Quantum', sans-serif; /* Cambia el tipo de letra a Decalotype ExtraBold */
-            text-transform: uppercase;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body onload="document.getElementById('nombre').value = '';
+             document.getElementById('email').value = '';
+             document.getElementById('mensaje').value = '';
+             document.getElementById('successMessage').style.display = 'none';">
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <a class="navbar-brand" href="index.html"><img src="https://upload.wikimedia.org/wikipedia/commons/5/5d/LaLiga_Hypermotion_2023_Horizontal_Logo.svg" width="150" alt="LaLiga Hypermotion"></a>
@@ -42,18 +34,21 @@
         <h1 class="text-center">Ficha por LaLiga</h1>
 
         <h1 class="text-center">Trabaja en la mejor Liga del mundo</h1>
-        <form onsubmit="event.preventDefault(); document.getElementById('successMessage').style.display = 'block';">
+        <form onsubmit="event.preventDefault(); document.getElementById('successMessage').style.display = 'block';
+                         document.getElementById('nombre').value = '';
+                         document.getElementById('email').value = '';
+                         document.getElementById('cv').value = '';">
             <div class="form-group">
                 <label for="nombre">Nombre:</label>
                 <input type="text" class="form-control" id="nombre" placeholder="Introduce tu nombre">
             </div>
             <div class="form-group">
                 <label for="email">Email:</label>
-                <input type="email" class="form-control" id="email" placeholder="Introduce tu email">
+                <input type="email" class="form-control" id="email" placeholder="Introduce tu email" required>
             </div>
             <div class="form-group">
-                <label for="mensaje">Mensaje:</label>
-                <textarea class="form-control" id="mensaje" rows="3"></textarea>
+                <label for="cv">Sube tu CV:</label>
+                <input type="file" class="form-control-file" id="cv" accept=".pdf,.doc,.docx" required>
             </div>
             <button type="submit" class="btn btn-primary">Enviar</button>
         </form>
@@ -61,11 +56,25 @@
             Su petición ha sido enviada correctamente.
         </div>
     </div>
+
+    <script>
+        function validateForm() {
+            var nombre = document.getElementById('nombre').value;
+            var email = document.getElementById('email').value;
+            var cv = document.getElementById('cv').value;
+            if (!nombre || !email || !cv) {
+                alert('Por favor, completa todos los campos antes de enviar el formulario.');
+                return false;
+            }
+            return true;
+        }
+    </script>
     <div style="height: 50px;"></div>
     <footer class="bg-dark text-white text-center py-3 d-flex align-items-center justify-content-center">
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0f/LaLiga_logo_2023.svg/1200px-LaLiga_logo_2023.svg.png" alt="Logo LaLiga" style="width: 50px; height: 50px; margin-right: 10px;">
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/ea/Royal_Spanish_Football_Federation_logo.svg/640px-Royal_Spanish_Football_Federation_logo.svg.png" alt="Logo RFEF" style="width: 50px; height: 50px; margin: 0 10px;">
-        <p class="mb-0">&copy; 2024 LaLiga. Todos los derechos reservados.</p>
+        <p class="mb-0">2024 LaLiga. Todos los derechos reservados.</p>
     </footer>
 </body>
 </html>
+
