--- a/historia.html
+++ b/historia.html
@@ -1,28 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HISTORIA DE LA LIGA</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <style>
-        @font-face {
-            font-family: 'Quantum';
-            src: url('font/QUANTU1H.TTF');
-        }
-        body {
-            background-color: #ADD8E6; /* Azul celeste claro */
-        }
-        body, h1, h2, p, a, nav, footer {
-            font-family: 'Quantum', sans-serif; /* Cambia el tipo de letra a Decalotype ExtraBold */
-            text-transform: uppercase;
-        }
-        .img-fluid {
-            width: 100%;
-            height: 200px; /* Set a fixed height for all images */
-            object-fit: cover; /* Ensures image covers the set dimensions */
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
@@ -42,7 +26,7 @@
             </div>
         </nav>
     </header>
-    <div style="height: 50px;"></div> <!-- Add a gap between the navbar and the images -->
+    <div style="height: 50px;"></div>
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-4"><img src="https://assets.laliga.com/assets/2024/10/27/large/d14057c91ee22bbf2d05dd77d6e17a64.jpeg" alt="Image 1" class="img-fluid"></div>
@@ -75,7 +59,7 @@
     <footer class="bg-dark text-white text-center py-3 d-flex align-items-center justify-content-center">
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0f/LaLiga_logo_2023.svg/1200px-LaLiga_logo_2023.svg.png" alt="Logo LaLiga" style="width: 50px; height: 50px; margin-right: 10px;">
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/ea/Royal_Spanish_Football_Federation_logo.svg/640px-Royal_Spanish_Football_Federation_logo.svg.png" alt="Logo RFEF" style="width: 50px; height: 50px; margin: 0 10px;">
-        <p class="mb-0">&copy; 2024 LaLiga. Todos los derechos reservados.</p>
+        <p class="mb-0">2024 LaLiga. Todos los derechos reservados.</p>
     </footer>
 </body>
 </html>
