--- a/clasificacion.html
+++ b/clasificacion.html
@@ -1,23 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clasificación</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <style>
-        @font-face {
-            font-family: 'Quantum';
-            src: url('font/QUANTU1H.TTF');
-        }
-        body {
-            background-color: #ADD8E6; /* Azul celeste claro */
-        }
-        body, h1, h2, p, a, nav, footer {
-            font-family: 'Quantum', sans-serif; /* Cambia el tipo de letra a Decalotype ExtraBold */
-            text-transform: uppercase;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
@@ -48,7 +36,7 @@
     <footer class="bg-dark text-white text-center py-3 d-flex align-items-center justify-content-center">
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0f/LaLiga_logo_2023.svg/1200px-LaLiga_logo_2023.svg.png" alt="Logo LaLiga" style="width: 50px; height: 50px; margin-right: 10px;">
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/ea/Royal_Spanish_Football_Federation_logo.svg/640px-Royal_Spanish_Football_Federation_logo.svg.png" alt="Logo RFEF" style="width: 50px; height: 50px; margin: 0 10px;">
-        <p class="mb-0">&copy; 2024 LaLiga. Todos los derechos reservados.</p>
+        <p class="mb-0">2024 LaLiga. Todos los derechos reservados.</p>
     </footer>
 </body>
 </html>
