--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
+<!DOCTYPE html>
 <html lang="es">
 <head>
+    <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LALIGA HYPERMOTION</title>
@@ -8,19 +10,6 @@
     <meta name="author" content="Jesús Pérez">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles.css">
-    <style>
-        @font-face {
-            font-family: 'Quantum';
-            src: url('font/QUANTU1H.TTF');
-        }
-        body {
-            background-color: #ADD8E6; /* Azul celeste claro */
-        }
-        body, h1, h2, p, a, nav, footer {
-            font-family: 'Quantum', sans-serif; /* Cambia el tipo de letra a Decalotype ExtraBold */
-            text-transform: uppercase;
-        }
-    </style>
 </head>
 <body>
     
@@ -96,7 +85,6 @@
             <div class="carousel-caption d-md-block" style="text-align: center; color: rgb(0, 0, 0); bottom: 0; position: relative; left: 50%; transform: translateX(-50%);">
                 <h1 class="display-5" style="display: block;">Bienvenido a La mejor segunda división</h1>
                 <p class="lead" style="display: block;">La liga más emocionante del mundo</p>
-                <a href="moderno.html" class="btn btn-primary btn-lg" style="display: block;">Explorar más</a>
             </div>
 
             <!-- Controles del carrusel -->
@@ -139,7 +127,7 @@
     <footer class="bg-dark text-white text-center py-3 d-flex align-items-center justify-content-center">
     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0f/LaLiga_logo_2023.svg/1200px-LaLiga_logo_2023.svg.png" alt="Logo LaLiga" style="width: 50px; height: 50px; margin-right: 10px;">
     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/ea/Royal_Spanish_Football_Federation_logo.svg/640px-Royal_Spanish_Football_Federation_logo.svg.png" alt="Logo RFEF" style="width: 50px; height: 50px; margin: 0 10px;">
-    <p class="mb-0">&copy; 2024 LaLiga. Todos los derechos reservados.</p>
+    <p class="mb-0">2024 LaLiga. Todos los derechos reservados.</p>
 </footer>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
